package entregas.lopezMartin.reto_005.reto_005a;
public class ControlDeVersiones {
    public static void main(String[] args) {
        Tree tree = new Tree();
        new Interfaz(tree).mostrar(); 
    }
        
}