package entregas.lopezMartin.reto_005.reto_005a;
public class Estado {

    private int numberFiles;

    public Estado(int numberFiles){

        this.numberFiles = numberFiles;
    }

    public int getNumberFiles() {
        return this.numberFiles;
    }
    
}
